--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.908Z",
-        "lastAccessed": "2025-09-01T13:16:14.909Z"
+        "creation": "2025-09-01T13:57:31.418Z",
+        "lastAccessed": "2025-09-01T13:57:31.419Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.419Z",
+        "lastAccessed": "2025-09-01T13:57:31.419Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.419Z",
+        "lastAccessed": "2025-09-01T13:57:31.419Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.419Z",
+        "lastAccessed": "2025-09-01T13:57:31.419Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.419Z",
+        "lastAccessed": "2025-09-01T13:57:31.419Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.419Z",
+        "lastAccessed": "2025-09-01T13:57:31.419Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.419Z",
+        "lastAccessed": "2025-09-01T13:57:31.419Z"
     },
     {
         "key": "dpr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.420Z",
+        "lastAccessed": "2025-09-01T13:57:31.420Z"
     },
     {
         "key": "vpd",
@@ -77,26 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.875",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
-    },
-    {
-        "key": "wd",
-        "value": "385x854",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.420Z",
+        "lastAccessed": "2025-09-01T13:57:31.420Z"
     },
     {
         "key": "c_user",
@@ -104,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.420Z",
+        "lastAccessed": "2025-09-01T13:57:31.420Z"
     },
     {
         "key": "xs",
@@ -113,34 +95,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.420Z",
+        "lastAccessed": "2025-09-01T13:57:31.420Z"
     },
     {
         "key": "fr",
-        "value": "05biJqZfCczVLZGZF.AWcGJXumADypax35mzuiQOIsovS8hSv1fT9vuSPXjZ5GrVDnC18.Bos1jM..AAA.0.0.BotZyU.AWcDKkWRTBJQNhTj9hRFVzONErY",
+        "value": "05biJqZfCczVLZGZF.AWflVpP8sUa0HtLwwkDJKcg2PKZFlV7o74zSJh-OJcpSMUt4ngM.Bos1jM..AAA.0.0.BotaZG.AWcKzIbzKAvC_UyX1Bc1E2WYeMs",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2909%3Btimestamp%3A1756732564",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.420Z",
+        "lastAccessed": "2025-09-01T13:57:31.420Z"
     },
     {
         "key": "fbl_st",
-        "value": "100422593%3BT%3A29278876",
+        "value": "100417778%3BT%3A29278917",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-09-01T13:16:14.910Z",
-        "lastAccessed": "2025-09-01T13:16:14.910Z"
+        "creation": "2025-09-01T13:57:31.420Z",
+        "lastAccessed": "2025-09-01T13:57:31.420Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2909%3Btimestamp%3A1756735046",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-01T13:57:31.420Z",
+        "lastAccessed": "2025-09-01T13:57:31.420Z"
     }
         ]
